Fix several layout issues and flesh out new widget modal.

--- a/app/assets/stylesheets/partials/board.css.sass
+++ b/app/assets/stylesheets/partials/board.css.sass
@@ -29,6 +29,10 @@ $navigate-prefix: "Visit "
       .inner
         border: 1px dotted $gray
 
+    .site-header
+      .new-widget
+        display: inline-block
+
     .neighbor
       visibility: hidden
 .board
